<resources>
    <string name="app_name">book2play</string>

    <string name="nav_home">Home</string>
    <string name="nav_bookings">My Bookings</string>
    <string name="nav_account">Account</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_close">close navigation drawer</string>
    <string name="nav_open">open navigation drawer</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="cat_futsal">Futsal</string>
    <string name="cat_cricket">Cricket</string>
    <string name="cat_badminton">Badminton</string>

    <string name="search">Search for indoors by names or city</string>
    <string name="stadium_name">CR7 Futsal &amp; Indoor Cricket Court</string>
    <string name="stadium_location">Kollupitiya</string>
    <string name="stadium_open">Open</string>
    <string name="closing_time">Closes at 12AM</string>
    <string name="stadium_price">Rs. 3500</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="stadium_owner">Stadium Owner</string>
    <string name="player">PLayer</string>
    <string name="loginBtnInSignup">Already a user? Login</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="signupBtnInSignIn">Are you new here? Register</string>
    <string name="user">User</string>
    <string name="stadiumImage">Stadium Image</string>

    <string name="tv_headline">Register Your Stadium With book2play</string>
    <string name="et_stadiumPhone">Phone Number</string>
    <string name="et_stadiumName">Stadium Name</string>
    <string name="et_stadiumAddress">Stadium Address</string>
    <string name="et_stadiumOT">Open Time</string>
    <string name="et_stadiumCT">Close Time</string>
    <string name="et_stadiumPrice">Session Price</string>
    <string name="btn_stadiumRegister">REGISTER</string>
    <string name="btn_addImage">Insert Image</string>

    <string name="nav_ownerHome">Home</string>
    <string name="nav_myStadiums">My Stadiums</string>
    <string name="nav_ownerLogout">Logout</string>
    <string name="nav_addStadium">Add Stadium</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stadiumTypeTextField">Stadium Type</string>
    <string name="edit_tv_headline">Update Your Stadium Details</string>
    <string name="btn_stadiumUpdate">Update</string>
    <string name="expected_income">Expected Total Income : </string>
    <string name="_0">0</string>
</resources>