<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
    <item
        android:title="@string/nav_home"
        android:id="@+id/nav_home"
        android:icon="@drawable/outline_home_24"
        android:checked="true" />
    <item
        android:id="@+id/nav_my_bookings"
    android:title="@string/nav_bookings"
    android:icon="@drawable/outline_sports_soccer_24"/>
    <item
        android:id="@+id/nav_account"
    android:title="@string/nav_account"
    android:icon="@drawable/outline_person_24"/>
    <item
        android:id="@+id/nav_logout"
    android:title="@string/nav_logout"
    android:icon="@drawable/outline_logout_24"/>
    </group>
</menu>


